# sequoia

./: README.md  compile_commands.json  cpplint.cfg  meson.build
.cccc/: AppThreadManager.html  AppThreadManager.xml  BlockingSyncBuffer.html  BlockingSyncBuffer.xml  Color.html  Color.xml  Configuration.html  Configuration.xml  Context.html  Context.xml  Dbg.html  Dbg.xml  Dimensioner.html  Dimensioner.xml  Event.html  Event.xml  EventBuffer.html  EventBuffer.xml  EventMessage.html  EventMessage.xml  FpsUpdater.html  FpsUpdater.xml  Image.html  Image.xml  ImageBufferUpdater.html  ImageBufferUpdater.xml  ImageProcessor.html  ImageProcessor.xml  ImageReader.html  ImageReader.xml  MainUI.html  MainUI.xml  Mat.html  Mat.xml  MetricUpdater.html  MetricUpdater.xml  Rect.html  Rect.xml  Rectangle.html  Rectangle.xml  (+32 more)
include/: AppThreadManager.hpp  BlockingSyncBuffer.hpp  Dimensioner.hpp  ImageProcessor.hpp  ImageReader.hpp  config.hpp  context.hpp  cv2debugging.hpp  errors.h  event.hpp  exit.h  filters.hpp  introspection.h  logging.hpp  mainui.hpp  ocv2ray.hpp  raygui.hpp  staticdbg.h  trackhistogram.hpp  uicontext.hpp  units.hpp
include/sequoiagfx/: color.hpp  drawing.hpp  image.hpp  rectangle.hpp
metrics/: depgraph.dot
src/: AppThreadManager.cpp  Dimensioner.cpp  ImageProcessor.cpp  ImageReader.cpp  color.cpp  config.cpp  context.cpp  cv2debugging.cpp  drawing.cpp  event.cpp  filters.cpp  image.cpp  logging.cpp  mainui.cpp  ocv2ray.cpp  raygui.cpp  sequoia.cpp  sequoia_trainer.cpp  uicontext.cpp
tools/: img2vs
